# malvin

./: .cursorrules  .gitattributes  .gitignore  .kissconfig  .kissignore  .malvin_checks  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  VISION.md  bug.md  build.rs  concepts.md  concepts_2.md  grounding.md  plan.md  plan_complain.md  pyproject.toml  review.md  statuses.md
.cargo/: config.toml
.config/: nextest.toml
.cursor/: commands
.llm_style/: malvin_tooling.md  style.md
.malvin/: checks
.malvin_memory/: acp_memory_containment.md  cli_and_review.md  index.md  linter_cheats.md  logger_output.md  paths_and_gates.md  prompts_and_templates.md  rust_cfg_includes.md  rust_platform_tests.md  rust_test_timeouts.md
admin/: check_untracked.sh  difftests_collect.sh  difftests_install.sh  difftests_rerun_dirty.sh  difftests_verify.sh  malvin_rust_test_gate.sh  nextest_list_serial.sh  sccache_install.sh  test_timing_gate.sh  verify_sccache.sh
default_prompts/: bug_fix.md  bug_regression_test.md  check_plan.md  check_sync.md  code_constraints.md  coding_rules.md  concerns.md  constrain_constraints.md  delight_constraints.md  do_header.md  explain_constraints.md  header.md  header_do.md  heartbeats.txt  hunt_request.md  implement.md  improve_grounding.md  init_constraints.md  kpop.md  kpop_block.md  kpop_common.md  kpop_program.md  kpop_program_creative.md  kpop_review.md  kpop_summarize.md  learn.md  malvin_post.md  mbc2.md  mbc2_pure.md  mini_constraints.md  mpc_planner.md  plan_1a_restate.md  plan_1b_critique.md  plan_2_decisions.md  plan_3_rewrite.md  review_1.md  review_2.md  review_descriptions.md  review_plan.md  review_tidy.md  (+9 more)
default_repo/: advice.md  config.toml  gitignore  grounding.md  kissignore  pre-commit-config.yaml
evaluations/: calc_cli_rs.sh  dag_scheduler_rs.sh  deterministic_dag_scheduler_rs.sh  evaluation.md  hello_world_py.sh  hello_world_rs.sh  max_loops_exhausted_rs.sh
experiments/: Cargo.toml  sandboxing.md
malvin-mini/: Cargo.toml
malvin-mini/src/: config.rs  error.rs  lib.rs  prompt_shrink.rs  test_support.rs
malvin-mini/src/openrouter/: client.rs  complete.rs  complete_parse.rs  fetch_completion_tests.rs  http_exchange.rs  kiss_coverage.rs  list_models.rs  list_models_tests.rs  mod.rs  models_list_response.rs  models_list_response_tests.rs  prompt_too_long_retry_tests.rs  provider_error.rs  serde_types.rs  tests.rs  types.rs
malvin-mini/tests/: openrouter_types_contract.rs
ops/: deepswe_modal.py  deepswe_run.py  diagnose_cidr_dns_modal.py  diagnose_cidr_dns_only_modal.py  diagnose_cidr_gap_modal.py  diagnose_cidr_modal.py  diagnose_cidr_observed_modal.py  malvin_modal.py  modal_diag_selftest.py  modal_sandbox_app.py  modal_sandbox_lifecycle.py  observe_agent_peers_modal.py  probe_cidr_connectivity_modal.py  probe_cursor_agent_modal.py  sandbox_prep.py  toolchain_repos.py
porting_artifacts/: log  plan.md
reports/: report-0001.tex
src/: acp_spawn_lock.rs  acp_spawn_sweep.rs  acp_test_mock_js.rs  active_agent_heartbeat.rs  agent_phase.rs  agent_phase_kiss_cov.rs  agent_phase_signal.rs  agent_sandbox_config.rs  agent_sandbox_unit_tests.rs  alnum_id.rs  ansi_strip.rs  artifacts.rs  cgroup_build.rs  cli_kiss_cov_smoke_tests.rs  cli_kiss_cov_smoke_tests_ext.rs  config.rs  coverage_kiss.rs  coverage_kiss_agent.rs  current_state.rs  current_state_tests.rs  env_path.rs  gate_loop_session.rs  invocation.rs  kpop_acp_prompt.rs  kpop_multiturn.rs  kpop_multiturn_prompts.rs  kpop_multiturn_prompts_tests.inc  kpop_progression.rs  kpop_schedule.rs  kpop_test_stubs.rs  kpop_test_stubs_tests.rs  kpop_turn_prompts.rs  kpop_turn_prompts_tests.rs  learn_gate.rs  lib.rs  lib_test_modules.rs  log_gc.rs  log_gc_config.rs  log_gc_config_tests.rs  log_gc_format.rs  (+61 more)
tests/: agent_bundle_kiss_contract.rs  brittle_gate_signals_fuzz.rs  cli_bare_invoke_contract.rs  cli_doc.rs  cli_parity.rs  cli_parity_bug_gates.rs  cli_parity_bug_modes.rs  cli_parity_code.rs  cli_parity_code_dry_run.rs  cli_parity_code_fanout.rs  cli_parity_code_gates.rs  cli_parity_ground.rs  cli_parity_linux_pty_a.rs  cli_parity_linux_pty_b.rs  cli_parity_sync.rs  cli_parity_tidy_gates.rs  code_kpop_contract.rs  code_stdout_malvin_config.rs  command_output_pipe_drain.rs  conftest.py  constrain_kpop_contract.rs  defer_enrich_live.rs  delight_kpop_contract.rs  do_stdout.rs  do_stdout_clamp.rs  do_stdout_gitignore.rs  do_stdout_malvin_config.rs  do_stdout_wrap_model.rs  explain_kpop_contract.rs  generate_script_cli_contract.rs  hostile_agent_sandbox_contract.rs  init_discovery.rs  init_idempotent.rs  (+57 more)
(+1002 files in other folders)
