[package]
name = "malvin"
version = "0.1.1"
edition = "2024"
rust-version = "1.87"
description = "Non-interactive CLI agent, via Cursor ACP"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dsweet/malvin"
keywords = ["malvin"]
categories = ["development-tools"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde_json = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"

[dev-dependencies]

[lib]
name = "malvin"
path = "src/lib.rs"

[[bin]]
name = "malvin"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[target.'cfg(target_os = "macos")'.dependencies]
errno = "0.3"
libc = "0.2"
libproc = "0.14"
