[workspace]
members = [".", "malvin-mini"]
resolver = "2"


[package]
name = "malvin"
version = "0.1.9"
edition = "2024"
rust-version = "1.87"
description = "Non-interactive CLI agent, via Cursor ACP"
license = "MIT"
readme = "README.md"
repository = "https://github.com/dsweet99/malvin"
keywords = ["malvin"]
categories = ["development-tools"]

[profile.dev]
incremental = true
codegen-units = 8

[env]
RUST_TEST_THREADS = "8"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4", features = ["derive"] }
malvin-mini = { path = "malvin-mini" }
rand = "0.8"
serde_json = "1"
tempfile = "3"
terminal_size = "0.4"
thiserror = "1"
toml = "0.8"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
tokio = { version = "1", features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry"] }
termimad = "0.34"
unicode-width = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]

[lib]
name = "malvin"
path = "src/lib.rs"

[[bin]]
name = "malvin"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
nursery = "warn"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
errno = "0.3"
libc = "0.2"
libproc = "0.14"

