[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "malvin-workspace-tests"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
