[package]
name = "malvin-mini"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
wiremock = "0.6"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
